hotfix: fixed responsive issue (overlap) in cover/image edit

--- a/components/profileHeader/profileHeader.module.scss
+++ b/components/profileHeader/profileHeader.module.scss
@@ -70,6 +70,11 @@
             margin: 0 !important;
         }
     }
+
+    @media (max-width: 500px) {
+        bottom: auto;
+        top: 24px;
+    }
 }
 
 .edit__name,
